--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "Nyamushka",
   "version": "1.0.0",
+  "homepage": "https://ds-sev.github.io/Nyamushka",
   "description": "funBox_test-task",
   "main": "src/index.js",
   "author": "Dmitry Litvinenko",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^3.31.1",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,5 +32,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "babel-loader": "^9.1.3"
   }
 }
